Added "Contact by email" and "Contact by phone" buttons

--- a/public/views/client.html
+++ b/public/views/client.html
@@ -118,6 +118,8 @@ access to use this app.
             <button id="myHandBtn" class="fas fa-hand-paper"></button>
             <button id="whiteboardBtn" class="fas fa-chalkboard-teacher"></button>
             <button id="fileShareBtn" class="fas fa-folder-open"></button>
+            <button id="promptUserPhoneNumberBtn" class="fas fa-phone"></button>
+            <button id="promptUserEmailBtn" class="fas fa-envelope"></button>
             <button id="documentPiPBtn" class="fas fa-images"></button>
             <button id="mySettingsBtn" class="fas fa-cogs"></button>
             <button id="aboutBtn" class="fas fa-question"></button>
